cabal-version: 2.2
name:          higer
version:       0.1.0.0
synopsis:      Compiler for tiger language
description:   Compiler for tiger language
homepage:      https://ci.cyberfined.xyz/cyberfined/higer
bug-reports:   https://ci.cyberfined.xyz/cyberfined/higer/issues
author:        cyberfined
maintainer:    cyberfined@protonmail.com
copyright:     Copyright (c) cyberfined
license:       WTFPL
license-file:  LICENSE
category:      Compilers
build-type:    Simple
extra-source-files:
    LICENSE
    README.md

source-repository head
  type:     git
  location: https://ci.cyberfined.xyz/cyberfined/higer

library
  exposed-modules:
      Tiger.Expr
    , Tiger.Parser
    , Tiger.Semant
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >= 4.7 && < 5
    , containers >= 0.6 && < 1
    , parser-combinators >= 1.3 && < 2
    , text >= 2 && < 3
    , mtl >= 2.3 && < 3
    , megaparsec >= 9.2 && < 10
    , unordered-containers >= 0.2 && < 1
  default-extensions:
      DerivingStrategies
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , OverloadedStrings
    , RecordWildCards
  default-language: Haskell2010

executable higer
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -Wall
  build-depends:
      base >= 4.7 && < 5
    , higer
    , text >= 2 && < 3
  default-extensions:
      LambdaCase
    , OverloadedStrings
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  other-modules:
      Common
    , ParserTests
    , SemantTests
  hs-source-dirs:
      tests
  ghc-options: -Wall
  build-depends:
      base >= 4.7 && < 5
    , higer
    , HUnit >= 1.6 && < 2
    , text >= 2 && < 3
  default-extensions:
      LambdaCase
    , OverloadedStrings
  default-language: Haskell2010
