cabal-version: 2.2
name:          higer
version:       0.1.0.0
synopsis:      Compiler for tiger language
description:   Compiler for tiger language
homepage:      https://ci.cyberfined.xyz/cyberfined/higer
bug-reports:   https://ci.cyberfined.xyz/cyberfined/higer/issues
author:        cyberfined
maintainer:    cyberfined@protonmail.com
copyright:     Copyright (c) cyberfined
license:       WTFPL
license-file:  LICENSE
category:      Compilers
build-type:    Simple
extra-source-files:
    LICENSE
    README.md

source-repository head
  type:     git
  location: https://ci.cyberfined.xyz/cyberfined/higer

library
  exposed-modules:
      Tiger.Amd64
    , Tiger.EscapeAnalysis
    , Tiger.Expr
    , Tiger.Frame
    , Tiger.IR
    , Tiger.Parser
    , Tiger.Semant
    , Tiger.Temp
    , Tiger.TextUtils    
    , Tiger.Unique
  other-modules:
      Tiger.Amd64.Emulator
    , Tiger.Amd64.Frame
    , Tiger.IR.Interpreter
    , Tiger.IR.Interpreter.Memory
    , Tiger.IR.Printer
    , Tiger.IR.Types
    , Tiger.Semant.LibFunctions
    , Tiger.Semant.Type
    , Tiger.Translate
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base >= 4.7 && < 5
    , containers >= 0.6 && < 1
    , hashable >= 1.4 && < 2
    , parser-combinators >= 1.3 && < 2
    , text >= 2 && < 3
    , mtl >= 2.3 && < 3
    , megaparsec >= 9.2 && < 10
    , unordered-containers >= 0.2 && < 1
    , vector >= 0.13 && < 1
    , vector-hashtables >= 0.1 && < 1
  default-extensions:
      DerivingStrategies
    , FlexibleInstances
    , GeneralizedNewtypeDeriving
    , LambdaCase
    , MultiParamTypeClasses
    , OverloadedStrings
    , RecordWildCards
    , TypeApplications
    , TupleSections
  other-extensions:
      ConstraintKinds
    , FlexibleContexts
    , ScopedTypeVariables
    , TypeFamilies
  default-language: Haskell2010

executable higer
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -Wall
  build-depends:
      base >= 4.7 && < 5
    , higer
    , text >= 2 && < 3
  default-extensions:
      LambdaCase
    , OverloadedStrings
    , RecordWildCards    
    , TypeApplications
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  other-modules:
      Common
    , EscapeAnalysisTests
    , ParserTests
    , TypeCheckerTests
    , IRGenTests
  hs-source-dirs:
      tests
  ghc-options: -Wall
  build-depends:
      base >= 4.7 && < 5
    , higer
    , text >= 2 && < 3
    , tasty >= 1.5 && < 2
    , tasty-hunit >= 0.10 && < 1    
  default-extensions:
      LambdaCase
    , OverloadedStrings
    , RecordWildCards
    , TypeApplications    
  default-language: Haskell2010
