cabal-version: 2.2
name:          higer
version:       0.1.0.0
synopsis:      Compiler for tiger language
description:   Compiler for tiger language
homepage:      https://github.com/cyberfined/higer
bug-reports:   https://github.com/cyberfined/higer
author:        cyberfined
maintainer:    cyberfined@protonmail.com
copyright:     Copyright (c) cyberfined
license:       WTFPL
license-file:  LICENSE
category:      Compilers
build-type:    Simple
extra-source-files:
    LICENSE
    README.md

source-repository head
  type:     git
  location: https://github.com/cyberfined/higer

library
  exposed-modules:
      Tiger.Amd64
    , Tiger.RegMachine
    , Tiger.Codegen
    , Tiger.DList
    , Tiger.EscapeAnalysis
    , Tiger.Expr
    , Tiger.Frame
    , Tiger.IR
    , Tiger.Parser
    , Tiger.Semant
    , Tiger.Temp
    , Tiger.TextUtils    
    , Tiger.Unique
  other-modules:
      Tiger.Amd64.AsmPrinters.Gas
    , Tiger.Amd64.Assem
    , Tiger.Amd64.Assem.Interpreter
    , Tiger.Amd64.Assem.Types
    , Tiger.Amd64.Codegen
    , Tiger.Amd64.Emulator
    , Tiger.Amd64.Frame.Linux
    , Tiger.Amd64.Frame
    , Tiger.EnumMap
    , Tiger.IR.Canon
    , Tiger.IR.Interpreter
    , Tiger.IR.Printer
    , Tiger.IR.Types
    , Tiger.Semant.LibFunctions
    , Tiger.Semant.Type
    , Tiger.Translate
    , Tiger.RegMachine.Memory
  hs-source-dirs:
      src
  ghc-options: -Wall -fno-warn-orphans
  build-depends:
      base >= 4.7 && < 5
    , containers >= 0.6 && < 1
    , fgl >= 5.8 && < 6
    , hashable >= 1.4 && < 2
    , parser-combinators >= 1.3 && < 2
    , text >= 2 && < 3
    , mtl >= 2.3 && < 3
    , megaparsec >= 9.2 && < 10
    , transformers >= 0.5 && < 1
    , unordered-containers >= 0.2 && < 1
    , vector >= 0.13 && < 1
    , vector-hashtables >= 0.1 && < 1
  default-extensions:
      ConstraintKinds
    , DeriveFunctor
    , DerivingStrategies
    , DerivingVia
    , FlexibleContexts
    , FlexibleInstances
    , GADTs
    , GeneralizedNewtypeDeriving
    , InstanceSigs
    , LambdaCase
    , MultiParamTypeClasses
    , OverloadedStrings
    , TypeFamilies
    , RecordWildCards
    , ScopedTypeVariables
    , StandaloneDeriving
    , TypeApplications
    , TupleSections
  other-extensions:
      DataKinds
    , FunctionalDependencies
  default-language: Haskell2010

executable higer
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -Wall
  build-depends:
      base >= 4.7 && < 5
    , higer
    , text >= 2 && < 3
  default-extensions:
      FlexibleContexts
    , LambdaCase
    , OverloadedStrings
    , RecordWildCards    
    , TypeApplications
    , TupleSections
  default-language: Haskell2010

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  other-modules:
      BackendTestCases
    , CodegenTests
    , Common
    , EscapeAnalysisTests
    , ParserTests
    , TypeCheckerTests
    , IRCanonTests
    , IRGenTests
  hs-source-dirs:
      tests
  ghc-options: -Wall
  build-depends:
      base >= 4.7 && < 5
    , fgl >= 5.8 && < 6
    , higer
    , text >= 2 && < 3
    , tasty >= 1.5 && < 2
    , tasty-hunit >= 0.10 && < 1    
  default-extensions:
      LambdaCase
    , FlexibleContexts
    , OverloadedStrings
    , ScopedTypeVariables
    , RecordWildCards
    , TypeApplications    
    , TupleSections
  default-language: Haskell2010
